--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  geolocator: ^1.7.0
+  permission_handler: ^2.0.0
 
 dev_dependencies:
   flutter_test:
