--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  geolocator: ^1.7.0
+  geolocator: ^2.0.1
   sqflite: ^0.12.1
   path: ^1.6.2
   path_provider: ^0.4.1
   synchronized: ^1.5.3
+  amap_location: ^0.1.1
 
 dev_dependencies:
   flutter_test:
